# tripleo-quickstart

./: .ansible-lint  .gitignore  .gitreview  .pre-commit-config.yaml  .yamllint  .zuul.yaml  Dockerfile  README.md  README.rst  ansible-collection-requirements.yml  ansible-role-requirements.yml  ansible.cfg  ansible_ssh_env.sh  bindep.txt  bindep_python2.txt  bindep_python3.txt  constraints.txt  devmode.sh  fs-matrix.py  install-deps.sh  molecule-requirements.txt  other-requirements.txt  quickstart-extras-requirements.txt  quickstart-role-requirements.txt  quickstart.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
ci-scripts/: ansible-lint.sh  basic.sh  centos_log_settings.yml  ci-base-requirements.txt  cleanup-stack-image-ovb.sh  collect-logs.sh  devmode_tempest.sh  feature-scale-deploy.sh  full-deploy-baremetal.sh  full-deploy-internal.sh  full-deploy-ovb.sh  full-deploy.sh  full-minimal.sh  get-node.sh  images.sh  include-gate-changes.sh  ooo-usbkey.sh  ovb-image-upload.sh  pre-commit-hook  provision_centos_settings.yml  releasenotes_tox.sh  return-node.sh  roles-deploy.sh  upgrade-baremetal.sh  upgrade.sh  validate-yaml
ci-scripts/pre-commit.d/: validate-yaml-in-commit
ci-scripts/usbkey/: RUN_ME.sh  ansible_env  quickstart-usb.yml  quickstart.sh  usb_requirements.txt
config/environments/: baseos_centos_libvirt.yml  baseos_rhel_libvirt.yml.example  ci_centos_libvirt.yml  default_libvirt.yml  dev_privileged_libvirt.yml  dev_privileged_virt.yml  standalone_centos_libvirt.yml  standalone_fedora_libvirt.yml
config/general_config/: build_images.yml  ceph.yml  composable_upgrade.yml  composable_upgrade_ovb.yml  containers_minimal.yml  devmode.yml  download_overcloud_images.yml  featureset-multinode-common.yml  featureset001.yml  featureset002.yml  featureset003.yml  featureset004.yml  featureset005.yml  featureset006.yml  featureset007.yml  featureset008.yml  featureset009.yml  featureset010.yml  featureset011.yml  featureset012.yml  featureset013.yml  featureset014.yml  featureset015.yml  featureset016.yml  featureset017.yml  featureset018.yml  featureset019.yml  featureset020.yml  featureset021.yml  featureset022.yml  featureset023.yml  featureset024.yml  featureset025.yml  featureset026.yml  featureset027.yml  featureset028.yml  featureset030.yml  featureset031.yml  featureset032.yml  featureset033.yml  (+44 more)
doc/: accessing-libvirt.md  accessing-overcloud.md  configuring.md  requirements.txt  unprivileged.md
docs/: README.md  accessing-undercloud.md  configuring.md  contributing.md  unprivileged.md
jenkins/: config.ini.sample
molecule/: Dockerfile.j2
playbooks/: build-images-and-quickstart.yml  build-images.yml  dlrn-gate.yml  gate-roles.yml  libvirt-fake-nodepool.yml  libvirt-fake-noodpool.yml  libvirt-nodepool.yml  libvirt-setup.yml  libvirt-teardown.yml  noop.yml  provision.yml  quickstart-extras.yml  quickstart-liberty.yml  quickstart-mitaka.yml  quickstart.yml  repo-setup-virthost.yml  repo-setup.yml  teardown-environment.yml  teardown-nodes.yml  teardown-provision.yml  teardown.yml  tripleo-roles.yml
settings/: libvirt.yml
test_plugins/: equalto.py
tests/: test_molecule.py  test_release_files.py  validate-release-config.yml
zuul.d/: layout.yaml
(+548 files in other folders)
