[metadata]
name = tripleo-quickstart
summary = tripleo-quickstart - Making it easy to get started with tripleo
description-file =
    README.rst
author = John Trowbridge
author-email = jtrowbri@redhat.com
home-page = https://github.com/openstack/tripleo-quickstart
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/tripleo-quickstart/jenkins = jenkins/*
    usr/local/share/tripleo-quickstart/roles = roles/*
    usr/local/share/tripleo-quickstart/library = library/*
    usr/local/share/tripleo-quickstart/test_plugins = test_plugins/*
    playbooks = playbooks/*
    config/general_config = config/general_config/*
    config/release = config/release/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
