[metadata]
name = tripleo-quickstart
summary = tripleo-quickstart - Making it easy to get started with tripleo
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/tripleo-quickstart/latest/
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[files]
data_files =
    usr/local/share/tripleo-quickstart/roles = roles/*
    usr/local/share/tripleo-quickstart/library = library/*
    usr/local/share/tripleo-quickstart/test_plugins = test_plugins/*
    playbooks = playbooks/*
    config/ = config/*

[pbr]
skip_authors = True
skip_changelog = True

[flake8]
# E123, E125 skipped as they are invalid PEP-8.
show-source = True
ignore = E123,E125
builtins = _

[tool:pytest]
ignore = .tox dist
addopts = -x
